--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   font-family: 'Chewy', sans-serif;
   font-family: 'Gloria Hallelujah', sans-serif;
   font-family: 'Patrick Hand', sans-serif;
-
+cart-count
 
 */
 
@@ -64,6 +64,7 @@ nav {
   width: 88%;
   border-bottom: solid var(--polish) 2px;
   background-color: rgba(33, 33, 33, 0.6);
+  backdrop-filter: blur(10px);
   z-index: 99;
   transition: all 0.3s ease-in;
 }
@@ -925,6 +926,45 @@ th {
   body {
     background-color: var(--black);
     color: var(--white);
+  }
+  .ul-el .cart-count {
+    border: none;
+    margin: 0;
+    position: relative;
+  }
+  .counting-logo {
+    cursor: pointer;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* change bellow */
+    background-color: rgb(51, 162, 226);
+    border-radius: 10px;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 5px 5px;
+  }
+
+  .counting {
+    position: fixed;
+    top: 4px;
+    right: -1px;
+    border: none;
+    outline: none;
+    color: red;
+    font-size: 15px;
+    font-weight: 500;
+    z-index: 999;
+    background-color: rgb(51, 162, 226);
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
   }
 }
 @media (prefers-color-scheme: light) {
