--- a/style.css
+++ b/style.css
@@ -937,7 +937,8 @@ th {
   }
   nav {
     border-bottom: solid var(--polish) 2px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
   }
   .ul-el li a {
     color: var(--black);
