--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   font-family: 'Chewy', sans-serif;
   font-family: 'Gloria Hallelujah', sans-serif;
   font-family: 'Patrick Hand', sans-serif;
-parag
+  min-width
 
 */
 
@@ -456,6 +456,7 @@ main {
   box-shadow: 0 0 10px var(--gray);
   flex: 1 1 0;
   min-width: 170px;
+  max-width: 470px;
 }
 
 .product-desc {
@@ -815,6 +816,12 @@ th:hover {
   color: var(--polish);
 }
 
+@media (min-width: 1053px) {
+  .home-hero {
+    min-width: 250px;
+  }
+}
+
 /* change the shoping section */
 @media (max-width: 611px) {
   .holder {
@@ -887,7 +894,6 @@ th:hover {
   nav {
     padding: 10px;
     flex-direction: column;
-    backdrop-filter: blur(10px);
   }
   .ul {
     display: none;
@@ -1006,7 +1012,6 @@ th:hover {
   nav {
     border-bottom: solid var(--polish) 2px;
     background-color: rgba(255, 255, 255, 0.7);
-    backdrop-filter: blur(10px);
   }
   .ul-el li a {
     color: var(--black);
