--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   font-family: 'Chewy', sans-serif;
   font-family: 'Gloria Hallelujah', sans-serif;
   font-family: 'Patrick Hand', sans-serif;
-  th
+  active
 
 */
 
@@ -77,6 +77,7 @@ nav {
   align-items: center;
   gap: 20px;
   padding: 5px;
+  transition: all 0.3s ease-in-out;
 }
 
 .ul-el {
@@ -907,6 +908,7 @@ td:hover,
     flex-direction: column;
     text-align: center;
     justify-content: flex-end;
+    transition: all 0.3s ease-out;
   }
   .ul li {
     width: 100%;
