--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 
 *::selection {
   background-color: var(--polish);
-  color: var(--gray);
+  color: var(--black);
 }
 
 :root {
@@ -51,18 +51,9 @@ body {
   overflow-x: hidden;
 }
 
-header {
-  padding-bottom: 70px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  position: relative;
-}
-
 nav {
   position: fixed;
-  width: 88%;
+  width: 100%;
   border-bottom: solid var(--polish) 2px;
   background-color: rgba(33, 33, 33, 0.9);
   backdrop-filter: blur(10px);
@@ -111,13 +102,7 @@ nav {
   cursor: pointer;
 }
 
-.null {
-  pointer-events: none;
-  user-select: none;
-  border: none;
-  outline: none;
-  visibility: hidden;
-}
+/* menu bar */
 
 .burger {
   width: 32px;
@@ -141,6 +126,10 @@ nav {
   border-radius: 25px;
 }
 
+/* menu bar ends here */
+
+/* popup starts here */
+
 .ul-el .cart-count {
   border: none;
   margin: 0;
@@ -154,16 +143,16 @@ nav {
   /* change bellow */
   background-color: rgb(51, 162, 226);
   border-radius: 10px;
-  position: absolute;
+  /* position: absolute;
   top: 10px;
-  right: 10px;
+  right: 10px;*/
   padding: 5px 5px;
 }
 
 .counting {
-  position: fixed;
+  /* position: fixed;
   top: 4px;
-  right: -1px;
+  right: -1px; */
   border: none;
   outline: none;
   color: red;
@@ -180,27 +169,22 @@ nav {
   margin: 0;
 }
 
-/* apear on scroll down only */
-.scroll-down nav {
-  transform: translate3d(0, -100%, 0);
-}
-
-.scroll-up nav {
-  filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
-}
-
-/* header ends here */
-
 .popup {
   display: none;
   position: absolute;
   top: 5rem;
   right: -0.6rem;
   min-width: 250px;
+  z-index: 99;
 }
 
 .cart-count {
-  border: solid;
+  position: relative;
+}
+.counting {
+  /* position: absolute;
+    top: -2.2rem;
+    right: -9.7rem; */
 }
 
 .popup-container {
@@ -225,7 +209,7 @@ nav {
   text-shadow: 0 0 10px var(--black);
 }
 
-.popup-handler .btn-close {
+.btn-close {
   position: absolute;
   right: -2rem;
   top: -1.7rem;
@@ -273,6 +257,22 @@ nav {
   max-width: 350px;
 }
 
+/* popup ends */
+
+/* apear on scroll down only */
+.scroll-down nav {
+  transform: translate3d(0, -100%, 0);
+}
+
+.scroll-up nav {
+  filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
+}
+
+header {
+  width: 88%;
+  margin: 0 auto;
+}
+
 main {
   width: 88%;
   margin: 0 auto;
@@ -281,10 +281,6 @@ main {
 #home {
   background-size: contain;
   background-repeat: no-repeat;
-}
-
-.row {
-  position: relative;
 }
 
 .cool-hang {
@@ -382,11 +378,14 @@ main {
 }
 
 .row {
-  flex: 2 1 0;
+  position: relative;
+  flex: 1 1 0;
+  border: solid red;
+  /* max-width: 600px; */
 }
 
 .home-img {
-  width: 400px;
+  max-width: 50%;
   flex: 2 1 0;
   border-radius: 15px;
 }
@@ -491,16 +490,15 @@ button .imgs {
 }
 
 .cart-add-btn {
-  position: absolute;
+  /* position: absolute; */
   width: 45px;
+  height: 45px;
   padding: 5px 5px;
   display: flex;
-  bottom: -10px;
-  right: -15px;
   justify-content: center;
   align-items: center;
   border: solid var(--gray);
-  border-radius: 20px;
+  border-radius: 10px;
   cursor: pointer;
   background-color: var(--acsent);
   filter: drop-shadow(0px 0px 10px var(--acsent));
@@ -833,7 +831,13 @@ td:hover,
     align-items: center;
   }
 }
-
+@media (max-width: 846px) {
+  .home-img {
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+  }
+}
 /* change the shoping section */
 @media (max-width: 611px) {
   .holder {
@@ -972,13 +976,13 @@ td:hover,
 
 @media (max-width: 422px) {
   .home-img {
-    scale: 0.8;
     padding: 0;
     margin: 0;
+    max-width: 100%;
   }
   .home-img:hover {
     box-shadow: none;
-    scale: 0.7;
+    /* scale: 0.7; */
   }
 }
 
@@ -990,6 +994,10 @@ td:hover,
     align-items: center;
     width: 100%;
     margin: 0 auto;
+  }
+  .home-img {
+    width: 100%;
+    border-radius: 5;
   }
   table {
     display: flex;
@@ -1022,17 +1030,10 @@ td:hover,
   .dev::before {
     left: 6rem;
   }
-  .cart-count {
-    position: relative;
-  }
-  .counting {
-    position: absolute;
-    top: -2.2rem;
-    right: -9.7rem;
-  }
+
   .counting-logo {
-    top: -2.2rem;
-    right: -8.9rem;
+    /* top: -2.2rem;
+    right: -8.9rem; */
   }
   .burger {
     right: 3rem;
