--- a/style.css
+++ b/style.css
@@ -979,6 +979,22 @@ nav {
 }
 
 @media (max-width: 422px) {
+  .cart-add-btn {
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    padding: 5px 10px;
+    display: flex;
+    bottom: -10px;
+    right: -15px;
+    justify-content: center;
+    align-items: center;
+    border: solid var(--gray);
+    border-radius: 8px;
+    cursor: pointer;
+    background-color: var(--acsent);
+    filter: drop-shadow(0px 0px 10px var(--acsent));
+  }
   .home-img {
     padding: 0;
     margin: 0;
