--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ main {
 .wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   flex-wrap: wrap;
   margin-bottom: 30px;
   gap: 25px;
@@ -398,7 +398,8 @@ main {
 .welcome-second,
 .welcome-third,
 .welcome-fourth,
-.welcome-fifth {
+.welcome-fifth,
+.welcome-sixth {
   flex: 2 2 0;
   max-width: 518px;
   min-width: 200px;
@@ -411,7 +412,8 @@ main {
 .welcome-second h3,
 .welcome-third h3,
 .welcome-fourth h3,
-.welcome-fifth h3 {
+.welcome-fifth h3,
+.welcome-sixth h3 {
   border-bottom: solid 3px var(--polish);
   margin-bottom: 10px;
 }
@@ -425,7 +427,7 @@ main {
   padding: 20px 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   flex-wrap: wrap;
   gap: 20px;
   position: relative;
@@ -433,19 +435,19 @@ main {
 
 .home-hero {
   border-radius: 15px;
-  width: 250px;
   padding: 20px;
   background: linear-gradient(180deg, var(--black) 50%, var(--acsent));
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  justify-self: stretch;
   gap: 20px;
   box-shadow: 0 0 10px var(--gray);
   flex: 1 1 0;
-  min-width: 170px;
-  max-width: 470px;
+  min-width: 250px;
+  max-width: 300px;
   user-select: none;
 }
 
@@ -818,16 +820,89 @@ td:hover,
   color: var(--polish);
 }
 
-@media (min-width: 1053px) {
-  .home-hero {
-    min-width: 250px;
+.wrapper,
+.home-hero,
+.welcome {
+  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 0.2);
+}
+
+@media (min-width: 974px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(autofit, minmax(200px, 1fr));
+    grid-template-rows: repeat(autofit, minmax(500px, 1fr));
+    /* justify-content: center;
+    align-items: center; */
+    justify-items: center;
+    align-items: stretch;
   }
+
+  .welcome p,
+  .welcome-sixth {
+    text-align: center;
+  }
+  .welcome p {
+    font-size: 20px;
+  }
+
+  .welcome {
+    padding: 20px 30px;
+  }
+
+  .welcome-second {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    max-width: 530px !important;
+    min-width: 200px !important;
+  }
+  .welcome-third {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    max-width: 530px !important;
+    min-width: 200px !important;
+  }
+  .welcome-fourth {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    max-width: 530px !important;
+    min-width: 200px !important;
+  }
+  .welcome-fifth {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+    max-width: 530px !important;
+    min-width: 200px !important;
+  }
+  .welcome-sixth {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    text-align: center;
+    min-width: 250px !important;
+    max-width: 300px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-self: center;
+    align-self: center;
+  }
+}
+
+@media (min-width: 1053px) {
   .welcome {
     min-width: 450px;
     justify-content: center;
     align-items: center;
   }
 }
+
+@media (max-width: 939px) {
+  .welcome {
+    min-width: 230px !important;
+  }
+}
+
 @media (max-width: 875px) {
   .home-img {
     padding: 0;
@@ -855,7 +930,8 @@ td:hover,
   }
   .home-hero {
     border-radius: 15px;
-    width: 250px;
+    max-width: 250px;
+    min-width: 190px;
     padding: 20px;
     background: linear-gradient(180deg, var(--black) 50%, var(--acsent));
     position: relative;
@@ -865,11 +941,6 @@ td:hover,
     align-items: center;
     gap: 20px;
     box-shadow: 0 0 10px var(--gray);
-  }
-  .popup.active {
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
   .brand {
     font-size: 3rem;
@@ -1068,6 +1139,12 @@ nav {
   }
   .btn-close {
     right: -3rem;
+  }
+}
+
+@media (min-width: 1500px) {
+  .home-hero {
+    min-width: 300px !important;
   }
 }
 
