--- a/style.css
+++ b/style.css
@@ -314,17 +314,17 @@ main {
 
 /* fading */
 .span {
-  opacity: 0;
+  opacity: 0.6;
   transition: all 0.1s cubic-bezier(0.68, -0.55, 0.265, 2);
-  transform: translateY(100px);
-  /* display: inline-block; */
-  filter: blur(50px);
+  transform: translateY(-30px);
+  display: inline-block;
+  filter: blur(7px);
 }
 
 .span.fade {
   opacity: 1;
   transform: translateY(0px);
-  transition: all 2s cubic-bezier(0.68, -0.55, 0.265, 0.5);
+  transition: all 1s cubic-bezier(0.68, -0.55, 0.265, 0.5);
   filter: blur(0);
 }
 /* fading ends here */
